Add remaining footer elements and styles for small screens

--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
       </div>
       <div class="footer__navs">
         <nav class="list-nav">
-          <div id ="service-nav-top" class="list-nav__top">
+          <div id="service-nav-top" class="list-nav__top">
             <h2 class="list-nav__title">お買い物＆サービス</h2>
             <svg id="service-menu-icon" class="list-nav__icon" focusable="false" width="24" height="24" viewBox="0 0 24 24" fill="none"
               xmlns="http://www.w3.org/2000/svg">
@@ -814,33 +814,33 @@
                 d="M11.9999 17.0605 3.9992 9.0593l1.4142-1.4141L12 14.2322l6.5869-6.586 1.4141 1.4143-8.0011 8z"></path>
             </svg>
           </div>
-          <div id ="service-nav-bottom" class="list-nav__bottom list-nav__bottom--closed">
-            <ul id ="service-links" class="list-nav__list list-nav__list--hidden">
+          <div id="service-nav-bottom" class="list-nav__bottom list-nav__bottom--closed">
+            <ul id="service-links" class="list-nav__list list-nav__list--hidden">
               <li>
-                <a>配送</a>
+                <a class="list-nav__link">配送</a>
               </li>
               <li>
-                <a>配送状況の確認</a>
+                <a class="list-nav__link">配送状況の確認</a>
               </li>
               <li>
-                <a>お支払い方法</a>
+                <a class="list-nav__link">お支払い方法</a>
               </li>
               <li>
-                <a>プランニング</a>
+                <a class="list-nav__link">プランニング</a>
               </li>
               <li>
-                <a>アプリ</a>
+                <a class="list-nav__link">アプリ</a>
               </li>
               <li>
-                <a>店舗検索</a>
+                <a class="list-nav__link">店舗検索</a>
               </li>
               <li>
-                <a>すべて見る</a>
+                <a class="list-nav__link">すべて見る</a>
               </li>
             </ul>
           </div>
         </nav>
-        <nav id ="support-nav" class="list-nav">
+        <nav class="list-nav">
           <div id="support-nav-top" class="list-nav__top">
             <h2 class="list-nav__title">サポート</h2>
             <svg id="support-menu-icon" class="list-nav__icon" focusable="false" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -852,24 +852,24 @@
           <div id="support-nav-bottom" class="list-nav__bottom list-nav__bottom--closed">
             <ul id="support-links" class="list-nav__list list-nav__list--hidden">
               <li>
-                <a>よくある質問</a>
+                <a class="list-nav__link">よくある質問</a>
               </li>
               <li>
-                <a>お問い合わせ</a>
+                <a class="list-nav__link">お問い合わせ</a>
               </li>
               <li>
-                <a>返品</a>
+                <a class="list-nav__link">返品</a>
               </li>
               <li>
-                <a>品質保証</a>
+                <a class="list-nav__link">品質保証</a>
               </li>
               <li>
-                <a>ご意見・ご感想</a>
+                <a class="list-nav__link">ご意見・ご感想</a>
               </li>
             </ul>
           </div>
         </nav>
-        <nav id="about-nav" class="list-nav">
+        <nav class="list-nav">
           <div id="about-nav-top" class="list-nav__top">
             <h2 class="list-nav__title">イケアについて</h2>
             <svg id="about-menu-icon" class="list-nav__icon" focusable="false" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -881,25 +881,90 @@
           <div id="about-nav-bottom" class="list-nav__bottom list-nav__bottom--closed">
             <ul id="about-links" class="list-nav__list list-nav__list--hidden">
               <li>
-                <a>イケアの理念</a>
+                <a class="list-nav__link">イケアの理念</a>
               </li>
               <li>
-                <a>サステナビリティ</a>
+                <a class="list-nav__link">サステナビリティ</a>
               </li>
               <li>
-                <a>採用情報</a>
+                <a class="list-nav__link">採用情報</a>
               </li>
               <li>
-                <a>ニュースルーム</a>
+                <a class="list-nav__link">ニュースルーム</a>
               </li>
               <li>
-                <a>IKEAカタログ（出版物）</a>
+                <a class="list-nav__link">IKEAカタログ（出版物）</a>
               </li>
             </ul>
           </div>
         </nav>
       </div>
-      <div class="footer__options"></div>
+      <div class="footer__options">
+        <div class="social-payment">
+          <nav class="social-nav">
+            <a class="social-link">
+              <svg class="social-link__icon" focusable="false" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M21 12c0-4.9706-4.0294-9-9-9s-9 4.0294-9 9c0 4.4922 3.2912 8.2155 7.5938 8.8907v-6.2891H8.3086V12h2.2852v-1.9828c0-2.2556 1.3436-3.5016 3.3994-3.5016.9847 0 2.0146.1758 2.0146.1758v2.2149h-1.1349c-1.118 0-1.4667.6937-1.4667 1.4054V12h2.4961l-.399 2.6016h-2.0971v6.2891C17.7088 20.2155 21 16.4922 21 12z"></path>
+              </svg>
+            </a>
+            <a class="social-link">
+              <svg class="social-link__icon" focusable="false" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 7.3795c.8036 0 1.567.241 2.2902.6428.7232.4018 1.2857.9643 1.6875 1.6875.4018.7232.6428 1.4866.6428 2.2902 0 .8438-.241 1.6071-.6428 2.3304-.4018.7232-.9643 1.2857-1.6875 1.6875-.7232.4017-1.4866.6026-2.2902.6026-.8438 0-1.6071-.2009-2.3304-.6026-.7232-.4018-1.2857-.9643-1.6875-1.6875-.4017-.7233-.6026-1.4866-.6026-2.3304 0-.8036.2009-1.567.6026-2.2902.4018-.7232.9643-1.2857 1.6875-1.6875.7233-.4018 1.4866-.6428 2.3304-.6428zm0 7.6339c.8036 0 1.5268-.2813 2.1295-.8839.5625-.5625.8839-1.2857.8839-2.1295 0-.8036-.3214-1.5268-.8839-2.1295-.6027-.5625-1.3259-.8839-2.1295-.8839-.8438 0-1.567.3214-2.1295.884-.6026.6026-.8839 1.3258-.8839 2.1294 0 .8438.2813 1.567.884 2.1295.5624.6026 1.2856.8839 2.1294.8839zm5.9062-7.8348c0-.2813-.1205-.5224-.3214-.7634-.241-.201-.4821-.3214-.7634-.3214-.3214 0-.5625.1205-.7634.3214-.241.241-.3214.4821-.3214.7634 0 .3214.0804.5625.3214.7634.2009.241.442.3214.7634.3214.2813 0 .5224-.0804.7232-.3214.2009-.201.3215-.442.3616-.7634zm3.0536 1.0848c0 .7634.0402 2.0089.0402 3.7366 0 1.7679-.0402 3.0134-.0804 3.7768-.0401.7634-.1607 1.4062-.3214 1.9687-.2411.6831-.6428 1.2857-1.125 1.7679-.4821.4821-1.0848.8437-1.7277 1.0848-.5625.2009-1.2455.3214-2.0089.3616C14.9732 21 13.7277 21 12 21c-1.7679 0-3.0134 0-3.7768-.0402-.7634-.0402-1.4062-.1607-1.9687-.4018-.683-.2009-1.2858-.5625-1.7679-1.0446-.4821-.4822-.8437-1.0848-1.0848-1.7679-.201-.5625-.3214-1.2053-.3616-1.9687C3 15.0134 3 13.7679 3 12c0-1.7277 0-2.9732.0402-3.7366.0402-.7634.1607-1.4464.3616-2.009.241-.6428.6027-1.2455 1.0848-1.7276.4821-.4822 1.0848-.884 1.7679-1.125.5625-.1607 1.2053-.2813 1.9687-.3214C8.9866 3.0402 10.2321 3 12 3c1.7277 0 2.9732.0402 3.7366.0804.7634.0401 1.4464.1607 2.0089.3214.6429.241 1.2456.6428 1.7277 1.125.4822.4821.8839 1.0848 1.125 1.7277.1607.5625.2813 1.2455.3616 2.0089zm-1.9286 9.0402c.1608-.442.2411-1.1652.3215-2.1697 0-.5625.0402-1.4062.0402-2.491v-1.2858c0-1.0848-.0402-1.9285-.0402-2.491-.0804-1.0045-.1607-1.7277-.3215-2.1697-.3214-.8035-.9241-1.4062-1.7276-1.7276-.442-.1608-1.1652-.2411-2.1697-.3215-.6027 0-1.4464-.0402-2.491-.0402h-1.2858c-1.0848 0-1.9285.0402-2.491.0402-1.0045.0804-1.7277.1607-2.1697.3214-.8437.3215-1.4062.9242-1.7276 1.7277-.1608.442-.2813 1.1652-.3215 2.1697-.0402.6027-.0402 1.4464-.0402 2.491v1.2858c0 1.0848 0 1.9285.0402 2.491.0402 1.0045.1607 1.7277.3214 2.1697.3215.8437.9242 1.4062 1.7277 1.7276.442.1608 1.1652.2813 2.1697.3215.5625.0402 1.4062.0402 2.491.0402h1.2858c1.0848 0 1.9285 0 2.491-.0402 1.0045-.0402 1.7277-.1607 2.1697-.3215.8035-.3214 1.4062-.9241 1.7276-1.7276z"></path>
+              </svg>
+            </a>
+            <a class="social-link">
+              <svg class="social-link__icon" focusable="false" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M6.3333 22h11.3334C20.06 22 22 20.06 22 17.6667V6.3334C22 3.94 20.06 2 17.6667 2H6.3333C3.94 2 2 3.94 2 6.3334v11.3333C2 20.06 3.94 22 6.3333 22zm5.635-16.79c4.015 0 7.2817 2.6517 7.2817 5.91 0 1.305-.5067 2.4783-1.56 3.635-1.5284 1.7583-4.945 3.9017-5.7217 4.2283-.7551.3176-.6674-.1808-.6328-.3772l.0028-.0161.1033-.6233c.025-.1867.05-.475-.0233-.6584-.0817-.2016-.405-.3066-.6417-.3583-3.5-.4617-6.09-2.9083-6.09-5.83 0-3.2583 3.2667-5.91 7.2817-5.91zm-1.48 4.3367h-.51a.1415.1415 0 0 0-.1416.1416v3.1734c0 .0783.0633.1416.1416.1416h.51a.1415.1415 0 0 0 .1417-.1416V9.6883a.1415.1415 0 0 0-.1417-.1416zm3.005 0h.51a.1367.1367 0 0 1 .1384.1417v3.1733a.1416.1416 0 0 1-.1417.1416h-.51a.1282.1282 0 0 1-.0367-.005h-.0016c-.0017-.0008-.0034-.0012-.005-.0016a.0227.0227 0 0 1-.005-.0017.0057.0057 0 0 1-.0025-.0008c-.0009-.0004-.0017-.0008-.0025-.0008a.0078.0078 0 0 0-.0034-.0017l-.0018-.0007a.0056.0056 0 0 1-.0015-.001c-.0008-.0008-.0021-.0012-.0033-.0017a.009.009 0 0 1-.0034-.0016s-.0016-.0017-.0033-.0017c-.0017-.0008-.0029-.0017-.0042-.0025-.0012-.0008-.0025-.0017-.0041-.0025a.0019.0019 0 0 0-.0002-.0008c-.0001-.0003-.0003-.0004-.0005-.0006-.0005-.0003-.001-.0002-.001-.0002a.1479.1479 0 0 1-.0367-.035l-1.455-1.9667V12.86a.1415.1415 0 0 1-.1416.1417h-.51a.1415.1415 0 0 1-.1417-.1417V9.6867a.1415.1415 0 0 1 .1417-.1417h.5216c.0017.0017.005.0017.0067.0017h.0067a.0122.0122 0 0 1 .0041.0008l.0012.0004a.0107.0107 0 0 0 .003.0004.0054.0054 0 0 0 .0024.0015c.0009.0002.0017.0002.0026.0002a.028.028 0 0 0 .0042.0017c.0012.0004.0025.0008.0041.0016a.0055.0055 0 0 1 .0025.0009c.0009.0004.0017.0008.0025.0008a.0311.0311 0 0 0 .0023.001l.0019.0007a.0424.0424 0 0 1 .0024.0008l.0018.0009c.0008 0 .0016.0004.0025.0008l.0009.0004a.0038.0038 0 0 0 .0016.0004.0384.0384 0 0 1 .0041.0025l.0012.0008a.0368.0368 0 0 0 .003.0017.0092.0092 0 0 0 .0025.0017c.0008.0004.0017.0008.0025.0016.0005.0006.0012.001.0019.0016a.017.017 0 0 1 .0014.001.0242.0242 0 0 1 .0034.0024l.0033.0034a.0354.0354 0 0 1 .0083.0066c.0009 0 .0013.0005.0017.0009.0004.0004.0008.0008.0017.0008a.0166.0166 0 0 1 .0052.0049.0407.0407 0 0 0 .0031.0034l.0017.0017c.005.005.0083.01.0116.015l1.4534 1.9633v-1.885a.1415.1415 0 0 1 .1416-.1416zM9.2567 12.208H7.8684v-2.52a.1416.1416 0 0 0-.1417-.1416h-.51a.1416.1416 0 0 0-.1417.1417v3.1733c0 .0383.015.0733.04.0983l.0017.0017.0017.0016c.025.025.06.04.0983.04h2.04a.1415.1415 0 0 0 .1416-.1416v-.5117a.1416.1416 0 0 0-.1416-.1417zm7.71-2.0098a.1416.1416 0 0 1-.1417.1417v.0017h-1.39v.5366h1.3883a.1416.1416 0 0 1 .1417.1417v.51a.1416.1416 0 0 1-.1417.1417H15.435v.5366h1.3883a.1416.1416 0 0 1 .1417.1417v.5117a.1415.1415 0 0 1-.1417.1416h-2.04a.1385.1385 0 0 1-.0983-.04l-.0017-.0016-.0016-.0017a.1385.1385 0 0 1-.04-.0983V9.69c0-.0383.015-.0733.04-.0983 0-.0017.0016-.0017.0016-.0034l.0017-.0016c.025-.025.06-.04.0983-.04h2.0417a.1416.1416 0 0 1 .1417.1416v.51z"></path>
+              </svg>
+            </a>
+            <a class="social-link">
+              <svg class="social-link__icon" focusable="false" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M19.1367 8.5c.7031-.5048 1.336-1.1106 1.8633-1.851-.7031.303-1.4062.5049-2.1094.5721.7735-.4711 1.336-1.1105 1.6172-1.9519-.7383.4039-1.5117.7068-2.3555.8414-.3515-.3366-.7734-.6058-1.2304-.8077C16.4648 5.1009 15.9727 5 15.4453 5c-.668 0-1.2656.1683-1.8281.4711-.5625.3366-1.0195.774-1.336 1.3125-.3515.5385-.4921 1.1443-.4921 1.75 0 .2693 0 .5385.0703.8078-1.5117-.0674-2.918-.4039-4.254-1.077C6.2696 7.625 5.1798 6.75 4.2657 5.6394c-.3515.5721-.5273 1.178-.5273 1.7837 0 .6058.1406 1.1779.457 1.6827.2813.5384.7031.9423 1.1953 1.2788-.5976 0-1.1601-.1683-1.6523-.4711v.0673c0 .8413.2812 1.5817.8437 2.2211.5625.6731 1.2657 1.0769 2.1094 1.2452-.3516.0673-.668.101-.9844.101-.211 0-.457 0-.668-.0337.211.7068.6329 1.2789 1.2657 1.75.6328.4712 1.336.6731 2.1797.6731-1.3711 1.0096-2.918 1.5144-4.6055 1.5144-.3516 0-.6328 0-.8789-.0336C4.6875 18.4952 6.586 19 8.6602 19c2.1445 0 4.0429-.5048 5.7304-1.5817 1.5117-.9423 2.7071-2.1875 3.5508-3.8029.8086-1.4808 1.2305-3.0625 1.2305-4.6779 0-.202-.0352-.3365-.0352-.4375z"></path>
+              </svg>
+            </a>
+            <a class="social-link">
+              <svg class="social-link__icon" focusable="false" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M21.5971 7.0313c.1465.6093.293 1.5572.3663 2.776L22 11.5l-.0366 1.6927c-.0733 1.2865-.2198 2.2005-.3663 2.8099-.1465.4063-.3663.7448-.6594 1.0156-.3296.3047-.6959.5078-1.1355.6094-.6593.1693-2.1245.2708-4.4689.3385L12 18l-3.3333-.0339c-2.3444-.0677-3.8462-.1692-4.4689-.3385-.4396-.1016-.8425-.3047-1.1355-.6094-.3297-.2708-.5495-.6093-.6594-1.0156-.1831-.6094-.293-1.5234-.3663-2.8099L2 11.5c0-.474 0-1.0495.0366-1.6927.0733-1.2188.1832-2.1667.3663-2.776.11-.4063.3297-.7448.6594-1.0495.293-.2709.696-.474 1.1355-.6094.6227-.1354 2.1245-.2708 4.4689-.3385L12 5l3.3333.0339c2.3444.0677 3.8096.203 4.4689.3385.4396.1354.8059.3385 1.1355.6094.2931.3047.5129.6432.6594 1.0495zM9.9487 14.276l5.2381-2.776-5.238-2.7422v5.5182z"></path>
+              </svg>
+            </a>
+          </nav>
+          <nav class="payment-nav">
+            <a class="payment-link">
+              <img src="assets/images/visa.svg" alt="visa">
+            </a>
+            <a class="payment-link">
+              <img src="assets/images/master-card.svg" alt="master card">
+            </a>
+            <a class="payment-link">
+              <img src="assets/images/jcb.svg" alt="jcb">
+            </a>
+            <a class="payment-link">
+              <img src="assets/images/diners-club.svg" alt="diner's club">
+            </a>
+            <a class="payment-link">
+              <img src="assets/images/american-express.svg" alt="american express">
+            </a>
+          </nav>
+        </div>
+        <div class="lang-options">
+          <a class="home-link">国の変更 </a>
+          <div class="select-container">
+            <select class="lang-select">
+              <option value="english">English</option>
+              <option value="japanese">Japanese</option>
+            </select>
+          </div>
+        </div>
+        <span class="copyright">© Inter IKEA Systems B.V 1999-2022 </span>
+        <div class="legal">
+          <a class="legal-link">プライバシーポリシー</a>
+          <a class="legal-link">利用規約</a>
+          <a class="legal-link">Cookieポリシー</a>
+          <a class="legal-link">Cookie設定</a>
+          <a class="legal-link">特定商取引法に基づく表記</a>
+          <a class="legal-link">古物営業法に基づく表記</a>
+        </div>
+      </div>
     </div>
   </footer>
 
