Adjust payment nav spacing

--- a/index.html
+++ b/index.html
@@ -950,8 +950,8 @@
           <a class="home-link">国の変更 </a>
           <div class="select-container">
             <select class="lang-select">
+              <option value="japanese">日本語 - Japanese</option>
               <option value="english">English</option>
-              <option value="japanese">Japanese</option>
             </select>
           </div>
         </div>
